--- a/Desenvolvimento/styles/clickable-boxes.css
+++ b/Desenvolvimento/styles/clickable-boxes.css
@@ -144,6 +144,13 @@
     left: 9%;
 }
 
+#product_backlog6{
+    width: 6.6%;
+    height: 2.2%;
+    top: 39.5%;
+    left: 3.2%;
+}
+
 #sprint_backlog{
     width: 5.3%;
     height: 3.5%;
